v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* Added startup option `--rocksdb.encryption-key-rotation` to
  activate/deactivate the encryption key rotation REST API. The API is disabled
  by default.

* Add internal caching for LogicalCollection objects inside
  ClusterInfo::loadPlan.

  This allows avoiding the recreation of LogicalCollection objects that did not
  change from one loadPlan run to the next. It reduces CPU usage considerably on
  both Coordinators and DB-servers.

* Fixed reading analyzers revisions for freshly updated cluster.

* Fixed undefined behavior in AQL COLLECT with multiple group variables (issue
  #12267).
  If you are grouping on "large" values that occur multiple times in different
  groups, and two different groups with the same large value are written to
  different batches in the output then the memory could be invalid.
  e.g. the following query is affected:
  ```
  FOR d IN documents
  FOR batchSizeFiller IN 1..1001
  COLLECT largeVal = d.largeValue, t = batchSizeFiller
  RETURN 1
  ```

* Revive faster out-of-range comparator for secondary index scans that do a full
  collection index scan for index types "hash", "skiplist", "persistent".

* Conflict error codes (1200) will now use the proper error message instead of a
  generic and misleading "precondition failed".

* Improve performance of agency cache by not copying the hierarchical Node
  tree result for serialization, but serializing it directly.

* Turn off maintenance threads on Coordinators, as they are not needed there.

* Fixed internal issue #733: Primary sort compression in ArangoSearch views now
  used properly.

* Change HTTP response code for error 1450 ("too many shards") from HTTP 500 to
  HTTP 400, as this is clearly a client error.

* Fix spurious lock timeout errors when restoring collections.

* Make sure cluster statistics in web UI work in case a coordinator is down.

* Updated arangosync to 0.7.8.
